--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,16 @@ jobs:
 
       - name: Create GitHub Release via gh CLI
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create "${{ github.ref_name }}" dist/* --generate-notes --title "Release ${{ github.ref_name }}"
+          set -e
+          TAG="${{ github.ref_name }}"
+          REPO="${{ github.repository }}"
+          echo "Ensuring release exists for $TAG on $REPO"
+          if gh release view "$TAG" --repo "$REPO" >/dev/null 2>&1; then
+            echo "Release exists; uploading artifacts (clobber)."
+            gh release upload "$TAG" dist/* --repo "$REPO" --clobber
+          else
+            echo "Release does not exist; creating now."
+            gh release create "$TAG" dist/* --repo "$REPO" --generate-notes --title "Release $TAG"
+          fi
