--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Organize and deduplicate photos, RAW files, and videos by date",
   "type": "module",
   "bin": {
-    "media-organizer": "./media-organizer.js"
+    "media-organizer": "./media-organizer.ts"
   },
   "scripts": {
-    "start": "bun run media-organizer.js",
-    "build": "bun run scripts/build.mjs",
+    "start": "bun run media-organizer.ts",
+    "build": "bun run scripts/build.ts",
+    "typecheck": "bun x tsc -p tsconfig.json --noEmit",
     "dist:clean": "rm -rf dist && mkdir -p dist"
   },
   "keywords": [
@@ -29,5 +30,10 @@
     "ink-scroll-list": "^0.4.1",
     "ink-text-input": "^6.0.0",
     "react-devtools-core": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
+    "typescript": "^5.9.3"
   }
 }
